syntax = "proto3";

package msg;

import "any.proto";


message TransForm {
    float X = 1;
    float Y = 2;
    float Z = 3;
    float Yaw = 4;
    float Pitch = 5;
    float Row = 6;
}

message  Position{
    map<string,TransForm> PosMap = 1; 
}

message CallFuncInfo {
    string RunnigNo = 1;
    string TargetId = 2;
    bytes TragetType = 3; 
    string Cb = 4;
    repeated google.protobuf.Any Param = 5;
    int64 TimeStamp = 6;
    //repeated google.protobuf.Any param = 3;
}

message Error{
    string ErrType = 1; 
    string ErrMsg = 2;
}

service Rpc{
    rpc SyncPos(stream Position) returns (stream Position){}
    rpc CallMethod(stream CallFuncInfo) returns (stream CallFuncInfo){}
    rpc ErrorPipLine(stream Error) returns (stream Error){}
    rpc Login(LoginInput) returns(UserInfo){}
    rpc CreateAccount(RegistInput) returns(Error){}
}

message LoginInput {
    string UserName = 1;
    string Pswd = 2;
}

message RegistInput {
    string UserName = 1;
    string Pswd = 2;
    string Email = 3;
}

message UserInfo{
    string UserName = 1;
    string Uuid = 2;
    map<string, Character> OwnCharacter = 3;
}

message RoomInfo{
    string Uuid = 1;
    string Name = 2;
    string GameType = 3;
    string OwnerUuid = 4;
    map<string, UserInfo> UserInRoom = 5;
}
//character 即是沒有實體之腳色
//entity 則藉由character來初始化
message Character {
    string Uuid = 1;
    string CharacterType = 2;
 string Name = 3;
    Color Color =4;
    int32 Level = 5;
    int32 Exp = 6;
    Ability Ability = 7;
    map<string,Equipment> EquipmentMap = 8;
}

message Color {
    int32 R = 1;
    int32 G = 2;
    int32 B = 3;
}

message Equipment{
    string Name = 1;
    string Type =2 ;
    string Uuid = 3 ;
    Color Color = 4;
    Ability Ability =5;
    int32 CD =6;//Cool down time tick
    int32 Usable =7;
    int32 Inventory =8;
}

message Ability{
    int32 ATK = 1;
    int32 DEF = 2;
    float SPD = 3;
    int32 MP = 4;
    int32 MAKT = 5;
}
